--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <title>Project 1</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <header>PacMan</header>
+  <main>
+  <div class="grid"></div>
+  <div class="results">
+    <p>Your Score is : 0</p>
+    <p>Number of Lives remaining are</p>
+  </div>
+  </main>
 </body>
 </html>
