basic controls done + board

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <main>
   <div class="grid"></div>
   <div class="results">
-    <p>Your Score is : 0</p>
-    <p>Number of Lives remaining are</p>
+    <p class="score">Your Score is : 0</p>
+    <p class="life">Number of lives : 3</p>
   </div>
   </main>
 </body>
