--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p class="score">Your Score is : 0</p>
     <p class="life">Number of lives : 3</p>
   </div>
+  <button class="start">Start</button>
   </main>
 </body>
 </html>
