--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <script src="scripts/app.js"></script>
   <title>Project 1</title>
@@ -11,12 +12,15 @@
 <body>
   <header>PacMan</header>
   <main>
-  <div class="grid"></div>
+  <div class="grid">
+    <div class="intro">
+    <button class="start">Start</button>
+  </div>
+  </div>
   <div class="results">
     <p class="score">Your Score is : 0</p>
     <p class="life">Number of lives : 3</p>
   </div>
-  <button class="start">Start</button>
   </main>
 </body>
 </html>
