--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <script src="scripts/app.js"></script>
   <title>Project 1</title>
 </head>
 <body>
-  <header>PacMan</header>
+  <header>Composition Pacman (No.I) with Red, Yellow and Blue’<br> – Jonny Farmer, 2019</header>
   <main>
   <div class="grid">
     <div class="intro">
-    <button class="start">Start</button>
+    <button class="start">Click to start</button>
   </div>
   </div>
   <div class="results">
