--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
   <div class="grid">
     <div class="intro">
-    <button class="start">Click to start</button>
+    <button class="start">Click to start<br> use w,a,s,d to move</button>
   </div>
   </div>
   <div class="results">
