--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </div>
   </div>
   <div class="results">
-    <p class="score">Your Score is : 0</p>
-    <p class="life">Number of lives : 3</p>
+    <p class="score">Avoid the red paint squares collect points and</p>
+    <p class="life">use the blue squares to go on the attack!</p>
   </div>
   </main>
 </body>
