--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   </div>
   <div class="results">
-    <p class="score">Avoid the red paint squares collect points and</p>
+    <p class="score">Avoid the red paint squares, collect points</p>
     <p class="life">use the blue squares to go on the attack!</p>
   </div>
   </main>
