readme + final touches

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Project 1</title>
 </head>
 <body>
-  <header>Composition Pacman (No.I) with Red, Yellow and Blue’<br> – Jonny Farmer, 2019</header>
+  <header>Composition PAC-MAN (No.I) with Red, Yellow and Blue’<br> – Jonny Farmer, 2019</header>
   <main>
   <div class="grid">
     <div class="intro">
